--- a/task 4.css
+++ b/task 4.css
@@ -108,6 +108,8 @@ a{
 	width:170px;
 	left:70%;
 	top:70px;
+     font-family: Arial, Helvetica, sans-serif;
+
 }
 .info_block{
 	background-color:white;
